# assignment

./: README.md
rolling_ohlc/: Cargo.toml
rolling_ohlc/src/: lib.rs
rolling_ohlc/tests/: tests.rs
rolling_ohlc_consumer/: Cargo.toml
rolling_ohlc_consumer/src/: main.rs
