[package]
name = "rolling_ohlc_consumer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolling_ohlc = { path = "../rolling_ohlc" }  # Adjust the path as needed
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"

